# parcos

./: Cargo.toml  README.md
examples/: arithmetic_operator.rs
src/: combinators.rs  error.rs  lib.rs  parser.rs  parsers.rs  stream.rs  tests.rs
src/combinators/: just.rs  map.rs  mod.rs  or.rs  pred.rs  repeat.rs  to.rs
