[package]
name = "parcos"
description = "minimal parser combinator library"
version = "0.0.5"
edition = "2021"
license = "MIT"
authors = ["Utsho de Bravestone <utshodebravestone@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[examples]]
name = "arithmetic_operator"
